# PLONK-in-SGX

./: .gitignore  README.md
circuit/: abi.json  out  out.r1cs  out.ztf  root.zok  run.sh
compare/app/: app.h
compare/enclave/: Cargo.toml  Makefile
compare/enclave/src/: circuit.rs  lib.rs
dusk-bls12_381-0.11.0/: .cargo_vcs_info.json  Cargo.toml
dusk-jubjub-0.12.0/: .cargo_vcs_info.json  Cargo.toml
dusk-plonk-0.12.0/: .cargo_vcs_info.json  Cargo.toml
dusk-plonk-0.12.0/src/constraint_system/: composer.rs
helloworld/: Makefile  run.sh
helloworld/app/: Enclave_u.c  Enclave_u.h
helloworld/enclave/: Cargo.toml  Enclave_t.c  Enclave_t.h  tree.txt
helloworld/enclave/src/: circuit.rs  lib.rs
lib/: clean.py
lib/byteorder-1.4.3/src/: io.rs  lib.rs
lib/derive-hex-0.1.2/: .cargo_vcs_info.json  Cargo.toml
lib/derive-hex-0.1.2/src/: lib.rs
lib/dusk-bls12_381-0.10.1/: .cargo_vcs_info.json  Cargo.toml
lib/dusk-bls12_381-0.10.1/src/: g1.rs  g2.rs  lib.rs  multiscalar_mul.rs  scalar.rs
lib/dusk-bytes-0.1.6/: .cargo_vcs_info.json  Cargo.toml
lib/dusk-bytes-0.1.6/src/: lib.rs  serialize.rs
lib/dusk-jubjub-0.12.0-rc.0/: .cargo_vcs_info.json  Cargo.toml
lib/dusk-jubjub-0.12.0-rc.0/src/: fr.rs  lib.rs  util.rs
lib/getrandom-0.2.5/: Cargo.toml
lib/getrandom-0.2.5/src/: error_impls.rs
lib/getrandom-sgx/: Cargo.toml
lib/keccak-0.1.2/: .cargo_vcs_info.json
lib/merlin-3.0.0/: Cargo.toml
lib/merlin-3.0.0/src/: lib.rs
lib/plonk/: Cargo.toml
lib/plonk/src/: lib.rs  permutation.rs
lib/plonk/src/commitment_scheme/kzg10/: proof.rs
lib/plonk/src/constraint_system/: composer.rs
lib/plonk/src/proof_system/: quotient_poly.rs
lib/proc-macro2-1.0.43/: Cargo.toml  build1.rs
lib/proc-macro2-1.0.43/src/: detection.rs  fallback.rs  lib.rs  marker.rs  parse.rs  rcvec.rs  wrapper.rs
lib/proc_macro/: Cargo.toml
lib/proc_macro/src/: diagnostic.rs  lib.rs  quote.rs
lib/proc_macro/src/bridge/: rpc.rs  server.rs
lib/quote-1.0.21/: .cargo_vcs_info.json  Cargo.toml
lib/quote-1.0.21/src/: ident_fragment.rs  lib.rs  runtime.rs  to_tokens.rs
lib/rand_core-0.6.3/: Cargo.toml
lib/rand_core-0.6.3/src/: error.rs  lib.rs
lib/rust-itertools-sgx/: .drone.yml  Cargo.toml
lib/rust-itertools-sgx/sgx/rust-itertools-sgx-test/enclave/: Cargo.toml  Enclave.config.xml
lib/rust-itertools-sgx/sgx/rust-itertools-sgx-test/enclave/src/: lib.rs
lib/rust-itertools-sgx/sgx/rust-itertools-sgx-test/enclave/src/tests/: merge_join.rs  mod.rs  peeking_take_while.rs  quick.rs  test_core.rs  test_std.rs  tuples.rs  zip.rs
lib/rust-itertools-sgx/src/: combinations.rs  combinations_with_replacement.rs  format.rs  free.rs  groupbylazy.rs  kmerge_impl.rs  lazy_buffer.rs  lib.rs  put_back_n_impl.rs
lib/rust-itertools-sgx/src/adaptors/: multi_product.rs
lib/syn-1.0.99/: Cargo.toml
lib/syn-1.0.99/src/: bigint.rs  buffer.rs  error.rs  export.rs  ext.rs  ident.rs  lib.rs  lit.rs  lookahead.rs  parse.rs  parse_macro_input.rs  punctuated.rs  tt.rs  ty.rs
lib/synstructure-0.12.6/: Cargo.toml
lib/synstructure-0.12.6/src/: lib.rs  macros.rs
lib/unicode-ident-1.0.3/: Cargo.toml
lib/unicode-ident-1.0.3/src/: lib.rs  tables.rs
lib/unicode-xid-0.2.3/: .cargo_vcs_info.json  Cargo.toml
lib/unicode-xid-0.2.3/src/: lib.rs
lib/zeroize-1.5.7/: Cargo.toml
lib/zeroize-1.5.7/src/: lib.rs
lib/zeroize_derive-1.3.2/: .cargo_vcs_info.json  Cargo.toml
lib/zeroize_derive-1.3.2/src/: lib.rs
mimc/: run.sh
mimc/enclave/: Cargo.toml  Makefile
mimc/enclave/src/: circuit.rs  lib.rs
myplonk/: Cargo.toml  tree.txt
myplonk/src/: circuit.rs  main.rs
other/: clean.py
other/arrayref-0.3.6/: Cargo.toml
other/arrayref-0.3.6/src/: lib.rs
other/arrayvec-0.5.2/: Cargo.toml
other/arrayvec-0.5.2/src/: lib.rs
other/bellman/: Cargo.toml
other/bellman/src/: domain.rs  lib.rs  multiexp.rs
other/bellman/src/gadgets/: blake2s.rs  boolean.rs  multieq.rs  multipack.rs  num.rs  sha256.rs  uint32.rs
other/bellman/src/gadgets/test/: mod.rs
other/bellman/src/groth16/: generator.rs  mod.rs  prover.rs  verifier.rs
other/bellman/src/groth16/tests/: dummy_engine.rs  mod.rs
other/bellman/src/groth16/verifier/: batch.rs
other/bitvec-0.22.3/: Cargo.toml
other/bitvec-0.22.3/src/: lib.rs
other/blake2s_simd-0.5.11/: Cargo.toml
other/blake2s_simd-0.5.11/src/: lib.rs
other/bls12_381-0.6.0/: .cargo_vcs_info.json  Cargo.toml
other/bls12_381-0.6.0/src/: g2.rs
other/byteorder-1.4.3/: Cargo.toml
other/byteorder-1.4.3/src/: lib.rs
other/cfg-if-1.0.0/: Cargo.toml
other/crossbeam-channel-0.5.2/: Cargo.toml
other/crossbeam-utils-0.8.7/: Cargo.toml
other/ff-0.11.0/: .cargo_vcs_info.json  Cargo.toml
other/getrandom-0.2.5/src/: lib.rs
other/group-0.11.0/: .cargo_vcs_info.json  Cargo.toml
other/iovec-0.1.2/: Cargo.toml
other/iovec-0.1.2/src/: lib.rs  unix.rs
other/iovec-0.1.2/src/sys/: mod.rs  unix.rs
other/log-0.4.14/: Cargo.toml
other/log-0.4.14/src/: lib.rs
other/num_cpus-1.13.1/: Cargo.toml
other/num_cpus-1.13.1/src/: lib.rs  linux.rs
other/pairing-0.21.0/: .cargo_vcs_info.json  Cargo.toml
other/pairing-0.21.0/src/: lib.rs
other/rand-0.8.5/: Cargo.toml
other/rand-0.8.5/src/: lib.rs
other/rand-0.8.5/src/rngs/: thread.rs
other/rand-0.8.5/src/rngs/adapter/: reseeding.rs
other/rand-0.8.5/src/seq/: index.rs
other/rand-sgx/: Cargo.toml
other/rand-sgx/src/rngs/: thread.rs
other/rand_chacha-0.3.1/: Cargo.toml
other/rand_chacha-0.3.1/src/: chacha.rs  guts.rs  lib.rs
other/rand_core-0.6.3/: Cargo.toml
other/serde-json-sgx/: Cargo.toml
other/wyz-0.4.0/: Cargo.toml
rock-paper-scissors/app/: app.c
rock-paper-scissors/enclave/: Cargo.toml  Enclave.edl  Makefile
rock-paper-scissors/enclave/src/: circuit.rs  lib.rs
test/: gen.py  private.pem
