[package]
name = "myplonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



rand_core = {version="0.6", default-features=false}
dusk-bytes = "0.1"
# dusk-bls12_381 = {version = "0.11", default-features = false, features = ["groups", "pairings", "endo"]}
dusk-jubjub = {path = "/root/sgx/exp/dusk-jubjub-0.12.0", default-features = false}
dusk-plonk = {path = "/root/sgx/exp/dusk-plonk-0.12.0"}

[dependencies.dusk-bls12_381]
path = "/root/sgx/exp/dusk-bls12_381-0.11.0"
# default-features = false
default-features = false
features = ["groups", "pairings", "endo"]